--- a/css/print.css
+++ b/css/print.css
@@ -7,104 +7,153 @@
 	display:none;
 }
 
-.panel {
-    width: 100%;
+.header{
+    position: absolute;
+    box-shadow: none;
+    background: #fff !important;
+    border-bottom:solid 1px #666;
+        height: 80px;
+}
+
+.header #logo{
+    display:none;
+}
+
+.header #printlogo{
+        width: 80px;
+    height: 80px;
+    float: left;
+    padding: 0px;
+        margin: 0px 10px 0px 0px;
+}
+
+.header .pg-wrap{
+    background:#fff !important;
+        padding: 0px;
+}
+
+.header h2{
+    margin:0px;
+    padding:0px;
+    color:#000;
+    font-size:12px;
+    font-weight:normal;
+    text-align:right;
     margin: 0px;
+	padding: 15px 0%;
+        width: 36%;
+    float: right;
+}
+
+.header h2 span{
+    font-size:24px;
+    font-weight:bold;
+}
+
+.theme-bkg {
+    background:#fff !important;
 }
 
 .info, #print {
     display: none;
 }
 
-.panel h1 {
-    background: #fff;
+.header h1 {
+    background: transparent;
     color: #000;
-	border-bottom:solid 1px #666;
-	width: 90%;
-    margin: 0% 5% 2% 5%;
-	padding: 2% 0%;
-	font-size: 1.5em;
-    line-height: 0.75em;
+    margin: 0px;
+    padding: 15px 0%;
+    height: 40px;
 }
 
-/*.panel h1 .dsk:before{
+/*h1 .dsk:before{
 	content:'My Listmas: ';
 	margin-left:10px;
 }*/
 
-.panel h1 .url{
+h1 .url{
 	font-size: 0.35em;
     font-weight: normal;
     line-height: 0.35em;
     text-transform: lowercase;
 }
 
-.panel h1 a, .panel h1 br {
+h1 a, h1 br {
 	display:none;
 }
 
-.panel h1 br.print{
+h1 br.print{
 	display:initial;
 }
 
-.panel .linearlist li .rtblock {
+.linearlist li .rtblock {
     display: none;
 }
 
-.panel .linearlist li .ltblock {
+.linearlist li .ltblock {
     width: 100%;
 }
 
-.panel .linearlist li .detail-btn {
+.linearlist li .detail-btn {
     display:none;
 }
 
-.panel .linearlist, .popup .linearlist {
+.linearlist, .popup .linearlist {
     width: 80%;
     margin-left: 10%;
 }
 
-.panel .linearlist li{
+.linearlist li{
 	padding:2% 0%;
 }
 
-.panel .linearlist li.bought {
+.linearlist li.bought {
     background: #fff;
 }
 
-.panel .linearlist li .prodname {
-	font-size: 1em;
+.linearlist li .prodname {
+	    font-size: 18px;
+    line-height: 20px;
 }
 
-.panel .linearlist li.bought .prodname, .panel .linearlist li.bought .icon {
-    opacity: 0.80;
+.linearlist li .description {
+    color: #c00;
+    font-size: 16px;
+    font-weight:bold;
+}
+
+.linearlist li.bought .prodname, .linearlist li.bought .icon {
+    opacity: 0.5;
 	text-decoration: line-through;
 	font-size: 0.75em;
 }
 
-.panel .linearlist li .icon, .popup .linearlist li .icon {
+.linearlist li .icon, .popup .linearlist li .icon {
     display: none;
 }
 
-.panel .linearlist li .icon.print{
+.linearlist li .icon.print{
 	display: block;
-    width: 15%;
+    width: 8%;
     margin: 0% 5% 0% 5%;
     padding: 0%;
 }
 
-.panel .linearlist li.bought .icon.print{
-	width:5%;
-	margin: 0% 10%;
+.linearlist li.bought .icon.print{
+	opacity: 0.5;
 }
 
-.panel .linearlist li .prodname, .popup .linearlist li .prodname {
+.linearlist li .prodname, .popup .linearlist li .prodname {
     padding: 0%;
     width: 70%;
 }
 
 #footer *, #footer a.gz{
 	display:none;
+}
+
+.ground-spacer {
+    padding-bottom: 0px;
 }
 
 .ground{
